Color Scheme Minor Changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ p {
   font-weight: 500;
   font-size: 80px;
   line-height: 1;
-  color: #231a20;
+  color: #252525;
   padding-right: 5px;
 }
 
@@ -104,7 +104,7 @@ a,
   font-weight: 300;
   font-size: 85px;
   line-height: 0.5;
-  color: #231a20;
+  color: #252525;
   text-decoration: none;
   background-color: transparent;
   box-sizing: content-box;
