--- a/mms/css/madmonks.css
+++ b/mms/css/madmonks.css
@@ -17,6 +17,7 @@ a{
 }
 body{
   font-family: Gerstner;
+  -webkit-font-smoothing: antialiased;
 }
 #composition{
   display: block;
@@ -73,6 +74,7 @@ header>.menu>ul>li {
   display: block;
   flex: 0 1 auto; /* Default */
   list-style-type: none;
+  letter-spacing: .5px;
 }
 header>.menu>ul>li>a{
   cursor: pointer;
@@ -81,7 +83,7 @@ header>.menu>ul>li>span.disabled{
   cursor: pointer;
 }
 header>.menu>ul>li>span.disabled>.menuitem{
-  opacity: .5;
+  opacity: .25;
 }
 header>.menu>ul>li>span.disabled.soon:hover .soontooltip {
   display: block;
@@ -123,22 +125,36 @@ header>.menu>ul>li>span.subscribe{
 header>.menu>ul>li>span.icon{
   height: 16px;
   position: relative;
+  margin-right: 12px;
 }
 header>.menu>ul>li>span.icon img{
   height: 16px;
   position: relative;
   margin-top: -4px;
 }
-header>.menu>ul>li>span.icon:first-child{
-  margin-right: 8px;
+header>.menu>ul>li>span.icon:nth-child(2){
+  margin-right: 9px;
+}
+header>.menu>ul>li>span.icon:last-child{
+  margin-right: 0px;
 }
 footer{
-  display: block;
+  display: flex;
   height: 35px;
   line-height: 34px;
   box-sizing: border-box;
   padding: 0px 16px;
   overflow: hidden;
+  font-size: 16px;
+}
+footer>.left, footer>.right{
+  width: 50%;
+}
+footer>.right{
+  text-align: right;
+  opacity: .5;
+  text-transform: uppercase;
+  font-size: 14px;
 }
 #cookies{
   display: none;
@@ -221,7 +237,8 @@ footer{
 #about>.comp-one{
   display: block;
   width: 100%;
-  position: relative;;
+  position: relative;
+  background-color: #fff;
 }
 #about>.comp-one::after { 
   content: "";
@@ -231,6 +248,8 @@ footer{
 #about>.comp-one>.hero{
   position: sticky;
   top: 88px;
+  color:#fff;
+  mix-blend-mode: exclusion;
 }
 #about>.comp-one>.hero>.top{
   padding: 1px 0px;
@@ -248,7 +267,6 @@ footer{
   text-align: center;
   line-height: 60px;
   color: #FFFFFF;
-  filter: invert(1);
 }
 #about>.comp-one>.hero>.top>.subcopy{
   max-width: 720px;
@@ -268,9 +286,10 @@ footer{
   font-size: 26px;
 }
 #about>.comp-one>.bg{
-  float: right;
   width: 50%;
-  margin-top: -280px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 #about>.comp-one>.bg>img{
   width: 100%;
@@ -284,6 +303,7 @@ footer{
   flex: 0 0 auto;
   width: 35%;
   border: 1px solid #fff;
+  border-left: 0px;
   box-sizing: border-box;
 }
 #about>.comp-two>.pic>img{
