--- a/mms/css/madmonks.css
+++ b/mms/css/madmonks.css
@@ -65,9 +65,10 @@ body{
   background-color: #f2f2f2;
   z-index: 100;
   height: 180px;
-  width: 360px;
+  width: 500px;
   box-sizing: border-box;
   padding: 36px 22px 36px 24px;
+  margin: auto;
 }
 #subscribe>.close{
   display: block;
