hotfix about bg img

--- a/mms/css/madmonks.css
+++ b/mms/css/madmonks.css
@@ -668,6 +668,10 @@ body{
     border-radius: 10px;
     cursor: pointer;
   }
+  header>.menu>ul>li>span.subscribe:hover{
+    background-color: #000;
+    color: #fff;
+  }
   header>.menu>ul>li>span.icon{
     height: 16px;
     position: relative;
@@ -745,6 +749,77 @@ body{
     width: 100%;
     position: relative;
   }
+
+
+
+
+#about>.comp-one{
+  display: block;
+  width: 100%;
+  position: relative;
+  background-color: #fff;
+  height: 100vh;
+}
+#about>.comp-one::after { 
+  content: "";
+  display: block; 
+  clear: both;
+}
+#about>.comp-one>.hero{
+  position: sticky;
+  top: 88px;
+  color:#fff;
+  mix-blend-mode: exclusion;
+}
+#about>.comp-one>.hero>.top{
+  padding: 1px 0px;
+  min-height: calc(50vh - 88px);
+}
+#about>.comp-one>.hero>.top::after { 
+  content: "";
+  display: block; 
+  clear: both;
+}
+#about>.comp-one>.hero>.top>.copy{
+  max-width: 940px;
+  margin: 48px auto 0px;
+  font-size: 67px;
+  text-align: center;
+  line-height: 60px;
+  color: #FFFFFF;
+}
+#about>.comp-one>.hero>.top>.subcopy{
+  max-width: 720px;
+  margin: 0px auto 48px;
+  font-size: 26px;
+  text-align: center;
+  line-height: 20px;
+  font-family: Panama;
+}
+#about>.comp-one>.hero>.left{
+  width: 50%;
+  padding: 16px;
+  box-sizing: border-box;
+}
+#about>.comp-one>.hero>.left>p{
+  font-family: Panama;
+  font-size: 26px;
+}
+#about>.comp-one>.bg{
+  width: 50%;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  overflow: hidden;
+}
+#about>.comp-one>.bg>img{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  object-fit: cover;
+  object-position: center center;
+}
 
 
 
